# fastapi_prtc

./: .gitignore  .pre-commit-config.yaml  DB_task.csv  db_connection.py  main.py  pyproject.toml  pytest.ini  test.py
app/: main.py  models.py
app/api/dependencies/: authentication.py  database.py
app/api/errors/: http_error.py  validation_error.py
app/api/routers/: api.py  authentication.py  tasks.py  users.py
app/api/routes/: api.py  login.py  registration.py  tasks.py  users.py
app/core/: config.py  logging.py
app/db/: db_connection.py  errors.py
app/db/repositories/: base.py  tasks.py  users.py
app/models/: jwt.py  tasks.py  users.py
app/secrets/: secrets.py
app/services/: authentication.py  jwt.py  secrets.py  security.py  utils.py
tests/: conftest.py  test_main.py
tests/test_api/: test_login.py  test_registration.py  test_tasks.py  test_users.py
