[tool.poetry]
name = "fastapi-prtc"
version = "0.1.0"
description = ""
authors = ["sun9zzang <sun9nyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
SQLAlchemy = "^1.4.41"
uvicorn = "^0.18.3"
PyMySQL = "^1.0.2"
pydantic = "^1.10.2"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"
pytest = "^7.1.3"
cryptography = "^38.0.1"
boto3 = "^1.24.80"
awscli = "^1.25.81"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
